strengthen and expand unit tests for more robust coverage